# orglens

./: .gitignore  README.md  demo.sh  pyproject.toml
orglens/: __init__.py  config.py  grammar.py  snapshot.py  state.py  topology.py
orglens/grammars/: default.yaml
skills/: org-context.md
skills/org-context/: SKILL.md
skills/org-context/references/: grammar-reference.md
tests/: test_config.py  test_grammar.py  test_snapshot.py  test_state.py  test_topology.py
